--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav>
                 <ul class="menu">
                     <li>
-                        <a href="#diversoes">Diversôes</a>
+                        <a href="#diversao">Diversão</a>
                     </li>
                     <li>
                         <a href="#sobre">Sobre Nós</a>
@@ -36,8 +36,8 @@
         </div>
     </header>
 
-    <section id="diversoes" class="container">
-        <h2>Diversões</h2>
+    <section id="diversao" class="container">
+        <h2>Diversão</h2>
         <ul class="produtos">
             <li>
                 <a href="">
